--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,3 +5,29 @@ body {
   background-color: $base-color;
   color: $color;
 }
+
+.main-page{
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  background-image: radial-gradient( circle 993px at 0.5% 50.5%,  rgba(137,171,245,0.37) 0%, rgba(245,247,252,1) 100.2% );
+}
+
+.main-video-container{
+  text-align: center;
+  canvas{
+    width: 960;
+    height: 640;
+    background-color: transparent;
+    z-index: 9999;
+  }
+  .video-button{
+    color: white;
+    background-color: blue;
+    width: 50%;
+    max-width: 250px;
+  }
+  .video-button:hover{
+    background-color: purple;
+  }
+}
